--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Front-End for kompak Gapura Desa Project",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"start": "light-server -s . -p 3000"
   },
   "repository": {
     "type": "git",
