--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "ng-dialog": "^1.3.0",
+    "ng-infinite-scroll": "^1.3.0",
     "ui-router-extras": "^0.1.3"
   }
 }
