--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
     "@uirouter/angularjs": "^1.0.4",
     "angular": "^1.6.4",
     "angular-animate": "^1.6.4",
+    "angular-aria": "^1.6.4",
     "angular-loading-bar": "^0.9.0",
     "angular-local-storage": "^0.6.0",
+    "angular-material": "^1.1.4",
     "angular-permission": "^5.3.2",
     "animate.css": "^3.5.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
+    "material-design-lite": "^1.3.0",
     "moment": "^2.18.1",
     "ng-dialog": "^1.3.0",
     "ng-infinite-scroll": "^1.3.0",
