--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "angular-masonry": "^0.17.0",
     "angular-material": "^1.1.4",
     "angular-permission": "^5.3.2",
+    "angular-sanitize": "^1.6.4",
     "animate.css": "^3.5.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
