--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "angular-local-storage": "^0.6.0",
     "angular-masonry": "^0.17.0",
     "angular-material": "^1.1.4",
+    "angular-nvd3": "^1.0.9",
     "angular-permission": "^5.3.2",
     "angular-sanitize": "^1.6.4",
     "animate.css": "^3.5.2",
+    "d3": "^4.9.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
