--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "angular": "^1.6.4",
     "angular-animate": "^1.6.4",
     "angular-aria": "^1.6.4",
+    "angular-chart.js": "^1.1.1",
     "angular-loading-bar": "^0.9.0",
     "angular-local-storage": "^0.6.0",
     "angular-masonry": "^0.17.0",
@@ -41,7 +42,6 @@
     "angular-permission": "^5.3.2",
     "angular-sanitize": "^1.6.4",
     "animate.css": "^3.5.2",
-    "d3": "^4.9.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
