--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "angular-permission": "^5.3.2",
     "angular-sanitize": "^1.6.4",
     "animate.css": "^3.5.2",
+    "crypto-js": "^3.1.9-1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
